# doseer

./: Cargo.toml  README.md
crates/colorschemes/: Cargo.toml  LICENSE-MIT
crates/colorschemes/src/: lib.rs
crates/colorschemes/src/colorschemes/: mod.rs
crates/colorschemes/src/colorschemes/catppuccin/: colors.rs  mod.rs
crates/colorschemes/src/default/: application.rs  button.rs  container.rs  mod.rs  pane_grid.rs  rule.rs  scrollable.rs  svg.rs  text.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  dirs.rs  lib.rs  path.rs
crates/fonts/: Cargo.toml
crates/fonts/font_macro/: Cargo.toml
crates/fonts/font_macro/src/: font_impl.rs  lib.rs
crates/fonts/font_macro/tests/: basic.rs  irr_def.rs
crates/fonts/src/: lib.rs
crates/iced_ext/: Cargo.toml
crates/iced_ext/src/: lib.rs
crates/iced_ext/src/components/: mod.rs  panelled.rs
crates/iced_ext/src/widgets/grid/: mod.rs  uniform.rs
crates/icon_loader/: Cargo.toml
crates/icon_loader/src/: lib.rs
crates/icon_loader/src/file/: mod.rs
crates/icon_loader/src/file/platform/: mod.rs  windows.rs
crates/icon_loader/src/file/platform/linux/: desktop.rs  mod.rs
crates/icon_loader/src/mime/: mod.rs
crates/icon_loader/src/mime/platform/: linux.rs
crates/ui_ext/: Cargo.toml
crates/ui_ext/src/: lib.rs
crates/ui_ext/src/components/: mod.rs  panelled.rs
crates/ui_ext/src/widget/: panelled.rs
crates/ui_ext/src/widgets/: mod.rs  only_one.rs
crates/ui_ext/src/widgets/grid/: flexbox.rs  mod.rs  uniform.rs
crates/ui_ext/src/widgets/reorderable/: column.rs  mod.rs  row.rs
src/: config.rs  content.rs  dirs.rs  gui.rs  icons.rs  item.rs  log.rs  main.rs  pane.rs  path.rs  side_bar.rs  tab.rs  theme.rs
src/gui/: icons.rs  item.rs  mod.rs  side_bar.rs  tab.rs  theme.rs
src/gui/pane/: area.rs  icons.rs  item.rs  mod.rs  tab.rs
src/gui/pane/item/: icons.rs  mod.rs
src/pane/: area.rs  mod.rs
src/tab/: content.rs  mod.rs  watcher.rs
