[workspace]
members = [
    "crates/*"
]

[package]
name = "doseer"
edition = "2021"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
license = "Apache-2.0"
publish = false

# ---

[dependencies]
doseer_core = { path = "crates/core" }
doseer_ui_ext = { path = "crates/ui_ext" }
doseer_icon_loader = { path = "crates/icon_loader" }

anyhow = "1"
indexmap = "1"
open = "3"
mimalloc = "0.1"
tokio = { version = "1", features = ["sync"] }

# File system stuff
notify = { version = "5.0.0", default-features = false, features = ["macos_kqueue"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GUI
iced = { version = "0.8", features = ["image", "svg", "tokio"] }
sleet = { git = "https://github.com/schctl/sleet", branch = "rewrite-2", features = ["all"] }

iced_lazy = "0.5"

# Macros
derive_more = "0.99"
lazy_static = "1"

# Serialization
toml = "0.5"
serde = { version = "1", features = ["derive"] }

# ---

[features]
debug = ["iced/debug"]
trace = ["debug"]

# Max OO ┻━┻ ︵ヽ(`Д´)ﾉ︵ ┻━┻
[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1
