[workspace]
members = [
    "crates/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
license = "Apache-2.0"
publish = false

[workspace.dependencies]
doseer_core = { path = "crates/core" }
doseer_colorschemes = { path = "crates/colorschemes" }
doseer_iced_ext = { path = "crates/iced_ext" }
doseer_icon_loader = { path = "crates/icon_loader" }

iced = "0.10"
iced_core = "0.10"
iced_style = "0.9"
iced_widget = "0.1"

# ---

[package]
name = "doseer"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
doseer_core = { workspace = true }

anyhow = "1"
indexmap = "2"
open = "5"
mimalloc = "0.1"
tokio = { version = "1", features = ["sync"] }

# File system stuff
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# GUI
doseer_colorschemes = { workspace = true, features = ["dev-default"]  }
doseer_iced_ext = { workspace = true }
doseer_icon_loader = { workspace = true }

iced = { workspace = true, features = ["image", "svg", "tokio", "advanced"] }

# Macros
derive_more = "0.99"
lazy_static = "1"

# Serialization
toml = "0.5"
serde = { version = "1", features = ["derive"] }

[features]
debug = ["iced/debug"]
trace = ["debug"]

# ---

# Max OO ┻━┻ ︵ヽ(`Д´)ﾉ︵ ┻━┻
[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 1
