[package]
name = "doseer_colorschemes"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = "MIT OR Apache-2.0"

[dependencies]
enum_dispatch = "0.3"
iced_core = { workspace = true }
iced_style = { workspace = true }
paste = "1"

derive_more = "0.99"
serde = { version = "1", features = ["derive"], optional = true }

[features]
dev-default = []
