[package]
name = "doseer_core"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
directories = "4"

# Macros
lazy_static = "1"
paste = "1"

# Serialization
toml = "0.5"
serde = { version = "1", features = ["derive"] }
