[package]
name = "doseer_core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = "1"
directories = "4"
serde = { version = "1", features = ["derive"] }

# Macros
lazy_static = "1"
paste = "1"
