[package]
name = "doseer_icon_loader"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
iced_native = "0.9"
lazy_static = "1"
mime_guess = "2"
moka = "0.10"
rayon = "1"
rust-ini = "0.18"
tracing = "0.1"

doseer_core = { path = "../core" }
