[package]
name = "doseer_icon_loader"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[dependencies]
iced_native = "0.9"
lazy_static = "1"
mime_guess = "2"
moka = "0.10"
rayon = "1"
tracing = "0.1"

doseer_core = { path = "../core" }

[target.'cfg(linux)'.dependencies]
rust-ini = "0.18"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(windows)'.dependencies]
widestring = "1"
