[package]
name = "doseer_icon_loader"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
doseer_core = { workspace = true }

iced_core = { workspace = true }
lazy_static = "1"
mime_guess = "2"
moka = { version = "0.12", features = ["sync"] }
rayon = "1"
tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
rust-ini = "0.20"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(windows)'.dependencies]
widestring = "1"
