[package]
name = "sleet_font_macro"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits"] }

rand = "0.8"

[dev-dependencies]
iced = "0.7"
